# Specter

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  MAINTAINERS.md  README.md  SECURITY.md  SUPPORT.md  config.yaml  docker-compose.yml  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
docs/: about.md  api.md  architecture.md  ci-cd.md  contributing-style.md  deployment.md  postman_collection.json  pr-style.md  roadmap.md  skills.md
migrations/: 001_init.sql  002_memory.sql
scripts/: dev.sh  setup.sh
src/specter/: agent.py  cli.py  config.py  main.py  storage.py
src/specter/brain/: orchestrator.py
src/specter/channels/: base.py  telegram.py
src/specter/core/: events.py  logging.py  reliability.py  security.py  state.py
src/specter/graph/: compiler.py  executor.py  models.py  streaming.py
src/specter/healing/: engine.py
src/specter/knowledge/: graph.py
src/specter/llm/: router.py
src/specter/presence/: engine.py
src/specter/skills/: forge.py  manager.py  sandbox.py
src/specter/skills/builtin/: calc.py  calendar.py  email.py  file_ops.py  search.py  web.py
tests/: test_health.py
web/: .env.local.example  package-lock.json  package.json  tsconfig.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/config/: route.ts
web/app/api/executions/: route.ts
web/app/api/executions/[id]/: route.ts
web/app/api/executions/[id]/replay/: route.ts
web/app/api/memory/entities/: route.ts
web/app/api/memory/summarize/: route.ts
web/app/api/memory/summary/: route.ts
web/app/api/meta/: route.ts
web/app/api/run/: route.ts
web/app/api/tools/: route.ts
web/app/components/: RunPanel.tsx
