[tool.poetry]
name = "specter"
version = "0.1.0"
description = "Execution-first autonomous agent"
authors = ["Your Team <team@example.com>"]
readme = "README.md"
packages = [{ include = "specter", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { version = "^0.40.0", extras = ["standard"] }
uvloop = "^0.22.1"
ujson = "^5.10.0"
httpx = "^0.28.1"
aiosqlite = "^0.22.1"
pydantic = "^2.8.0"
pydantic-settings = "^2.4.0"
python-dotenv = "^1.0.1"
structlog = "^24.2.0"
rich = "^14.3.2"
pyyaml = "^6.0.2"
litellm = "^1.81.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^1.3.0"
ruff = "^0.15.0"

[tool.poetry.scripts]
specter = "specter.main:run"
specter-cli = "specter.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []
